# conferencemapper

./: LICENSE  README  README.md  conferencemapper.py  conferencemapper.service  conferencemapper.socket  pyproject.toml  setup.cfg
.github/workflows/: release.yml  test-and-build.yml
tests/: test_app.py
