[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conferencemapper"
version = "1.0.0"
description = "Jigasi ConferenceMapper with Redis, Flask and Gunicorn"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
authors = [
    {name = "Christoph Settgast", email = "csett86_git@quicksands.de"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "redis",
    "flask",
]

[project.urls]
Homepage = "https://github.com/luki-ev/conferencemapper"
"Bug Tracker" = "https://github.com/luki-ev/conferencemapper/issues"

[tool.setuptools.packages.find]
include = ["conferencemapper"]
