[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conferencemapper"
version = "1.0.1"
description = "Jigasi ConferenceMapper with Redis, Flask and Gunicorn"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [
    {name = "Christoph Settgast", email = "csett86_git@quicksands.de"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "redis",
    "flask",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "fakeredis>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/luki-ev/conferencemapper"
"Bug Tracker" = "https://github.com/luki-ev/conferencemapper/issues"

[tool.setuptools.packages.find]
include = ["conferencemapper"]
