[metadata]
name = conferencemapper
version = 1.0.0
author = Christoph Settgast
author_email = csett86@web.de
description = Jigasi ConferenceMapper with Redis, Flask and Gunicorn
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/luki-ev/conferencemapper
project_urls =
    Bug Tracker = https://github.com/luki-ev/conferencemapper/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = conferencemapper
install_requires =
    redis
    flask
python_requires = >=3.6